# olx-scraper

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  schema.sql
docs/: dokumentacja.md
src/olx_scraper/: cli.py  database.py  offer_scraper.py  result.py  utils.py
src/olx_scraper/database/: categories.py  crud.py  database.py  db_setup.py  docker-compose.yaml  schema.sql
src/olx_scraper/endpoints/: category_offer_listings.py  fetch_categories.py  scrape_categories.py
src/olx_scraper/scrapers/: scrape_by_category.py  scrape_categories.py
