[project]
name = "olx-scraper"
version = "0.1.0"
description = "olx scraper"
authors = [{ name = "Aleksander Drwal", email = "olek.drwal@gmail.com" }]
dependencies = ["gql>=3.5.3", "pydantic>=2.11.5", "aiohttp>=3.12.4", "typer>=0.16.0", "psycopg2-binary>=2.9.10"]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ariadne-codegen]
# schema_path = "schema.graphql"     # Or an introspection URL
queries_path = "schema.graphql" # Or a list of query files
